# archery-yolo11s-detection

./: .gitattributes  .gitignore  CITATION.cff  DATASET_CARD.md  DATASET_CARD.zh-CN.md  MODEL_CARD.md  MODEL_CARD.zh-CN.md  Makefile  README.md  README.zh-CN.md  REPRODUCIBILITY.md  REPRODUCIBILITY.zh-CN.md  RESULTS.md  RESULTS.zh-CN.md  THIRD_PARTY_NOTICES.md  VISUAL_ANALYSIS.md  VISUAL_ANALYSIS.zh-CN.md  pyproject.toml
.github/workflows/: verify.yml
app/: yolo_replica_demo.py
configs/train/: yolo11s_target_v6_150e.yaml
data/target-arrow-detection-v6/: data.yaml
evaluation/: results_summary.json  standard_ap_test.json
evaluation/source_reports/: 02_public_dataset_audit.json  02_public_dataset_audit.md  04_current_validation_selection.json  04_replication_metrics.json  04_replication_report.md  07_error_analysis.json  07_error_analysis.md  08_final_model_card.md
provenance/: path_rewrite.json  source_inventory.json  sync_summary.json
release/: manifest.json  release_notes_v1.0.0.md
scripts/: evaluate_standard_ap.py  generate_repository_visuals.py  run_yolo_replica_demo.sh
tests/: test_cli_contract.py  test_publication_contract.py  test_release_tools.py  test_replication_evaluation.py  test_replication_predict.py  test_replication_yolo_audit.py  test_repository_visuals.py  test_roboflow_train_metrics_plot.py  test_standard_ap.py  test_sync_release.py  test_verify_release.py  test_visual_documentation.py  test_yolo_replica_demo.py  test_yolo_replica_streamlit.py
tools/: __init__.py  build_manifest.py  release_tools.py  sync_release.py  verify_release.py
(+1533 files in other folders)
