[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archery-yolo11s-detection"
version = "1.0.0"
description = "Reproducible YOLO11s training, evaluation, and inference for archery target and score-region detection."
readme = "README.md"
requires-python = "==3.12.*"
license = "AGPL-3.0-only"
authors = [
  {name = "Zhengyang Wang"},
  {name = "Jiacheng Yao"},
]
dependencies = [
  "numpy==2.4.4",
  "opencv-python==4.13.0.92",
  "Pillow==12.2.0",
  "PyYAML==6.0.3",
  "matplotlib==3.10.8",
  "pandas==3.0.2",
  "torch==2.11.0",
  "torchvision==0.26.0",
  "ultralytics==8.4.48",
]

[project.optional-dependencies]
demo = ["streamlit==1.58.0"]
dev = ["pytest==9.0.3"]

[project.scripts]
archery-ml = "archery_ml.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
